--- a/VidhayakApp.Web/VidhayakApp.Web.csproj
+++ b/VidhayakApp.Web/VidhayakApp.Web.csproj
@@ -26,4 +26,11 @@
     <ProjectReference Include="..\VidhayakApp.Infastructure\VidhayakApp.Infastructure.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Content Update="Views\User\Dashboard.cshtml">
+      <ExcludeFromSingleFile>true</ExcludeFromSingleFile>
+      <CopyToPublishDirectory>PreserveNewest</CopyToPublishDirectory>
+    </Content>
+  </ItemGroup>
+
 </Project>
