05-03-2024 12:24pm trying delete in admin using button

--- a/VidhayakApp.Application/VidhayakApp.Application.csproj
+++ b/VidhayakApp.Application/VidhayakApp.Application.csproj
@@ -19,6 +19,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\VidhayakApp.Core\VidhayakApp.Core.csproj" />
+    <ProjectReference Include="..\VidhayakApp.Infastructure\VidhayakApp.Infastructure.csproj" />
   </ItemGroup>
 
   <ItemGroup>
