14-03-2024 01:44pm trying to fix the form but form not submitting on demand (No error)

--- a/VidhayakApp.Web/VidhayakApp.Web.csproj
+++ b/VidhayakApp.Web/VidhayakApp.Web.csproj
@@ -1756,4 +1756,9 @@
     </Content>
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Views\Complaint\" />
+    <Folder Include="Views\Demand\" />
+  </ItemGroup>
+
 </Project>
