--- a/VidhayakApp.SharedKernel/VidhayakApp.SharedKernel.csproj
+++ b/VidhayakApp.SharedKernel/VidhayakApp.SharedKernel.csproj
@@ -14,4 +14,8 @@
     </PackageReference>
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\VidhayakApp.Core\VidhayakApp.Core.csproj" />
+  </ItemGroup>
+
 </Project>
