04-04-2024 15:16pm updated the AppUser code so that it can change the suggestion status also disabled the Appuser dashboard <a> tags

--- a/VidhayakApp.Web/VidhayakApp.Web.csproj
+++ b/VidhayakApp.Web/VidhayakApp.Web.csproj
@@ -1744,6 +1744,8 @@
     <PackageReference Include="Microsoft.Extensions.Configuration" Version="8.0.0" />
     <PackageReference Include="Microsoft.Extensions.Localization" Version="8.0.2" />
     <PackageReference Include="MySql.Data" Version="8.3.0" />
+    <PackageReference Include="PagedList" Version="1.17.0" />
+    <PackageReference Include="PagedList.Mvc" Version="4.5.0" />
   </ItemGroup>
 
   <ItemGroup>
