18-04-2024 12:13pm Middleware implemented not working

--- a/VidhayakApp.Web/Web.config
+++ b/VidhayakApp.Web/Web.config
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+﻿<!--<?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <system.webServer>
     <handlers>
@@ -9,10 +9,10 @@
             <forms loginUrl="login.cshtml" name=".ASPNETAUTH" protection="None" path="/" timeout="20" >
             </forms>
         </authentication>
-        <!-- This section denies access to all files in this application except for those that you have not explicitly specified by using another setting. -->
+        --><!-- This section denies access to all files in this application except for those that you have not explicitly specified by using another setting. --><!--
         <authorization>
             <deny users="?" />
         </authorization> 
 
 </system.webServer>
-</configuration>
+</configuration>-->
